@@ -5,6 +5,7 @@ Revision history for Perl extension Promise::XS:
   Toward that end, finally() callbacks no longer receive arguments.
 - A warning is now thrown if a promise is the first of multiple returns from
   a promise callback.
+- Speed up memory-leak detection on promise creation.
 
 0.07 Tue 11 Feb 2020
 - Support old event loop versions that lack zero-timer methods.
